# ray-tracing

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE
asset/shader/: f_copy.frag  f_draw_tex.frag  v_copy.vert  v_mvp_pos.vert  v_mvp_pos_tex.vert
libs/: CMakeLists.txt  Lib.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: imgui_demo.cpp
libs/imgui/docs/: BACKENDS.md  EXAMPLES.md  FAQ.md  FONTS.md  README.md
ray-tracing-1/: App1.cpp
ray-tracing-1/ray_tracing/: camera.h  hittable_list.h  material.h  rtweekend.cpp
ray-tracing-1/scene/: 01CreateImageScene.cpp  04RayBackgroundScene.cpp  05RaySphereScene.cpp  06RaySphereScene2.cpp  08RayAntialiasingScene.cpp  08RayAntialiasingScene.h  09RayDiffuseScene.cpp  09RayDiffuseScene.h  10RayMetalScene.cpp  10RayMetalScene.h  11RayRefractionScene.cpp  11RayRefractionScene.h  12RayViewingScene.cpp  12RayViewingScene.h  13RayDefocusBlurScene.cpp  13RayDefocusBlurScene.h  14RayTracingScene.cpp  14RayTracingScene.h  BaseScene.cpp  BaseScene.h  CreateImageScene.cpp  CreateImageScene.h  RayBackgroundScene.h  RayDiffuseScene.cpp  RayMetalScene.cpp  RayRefractionScene.cpp  RaySphereScene2.cpp  RaySphereScene2.h  RayTracingScene.cpp  RayTracingScene.h  RayViewingScene.cpp
src/: App.cpp  App.h  Define.h  GLWindow.cpp  GLWindow.h  main.cpp
src/camera/: Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h
src/common/: ChineseSimplifiedUnicode.cpp  ChineseSimplifiedUnicode.h  EventSystem.cpp  EventSystem.h  FrameBuffer.cpp  FrameBuffer.h  Logger.h  MathHelp.cpp  MathHelp.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TimeSys.cpp  TimeSys.h  Utils.cpp  Utils.h  vec3.h
src/ray_tracing/: camera .h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
src/scene/: BaseScene.cpp  BaseScene.h  CreateImageScene.cpp  CreateImageScene.hpp  PictureScene.cpp  PictureScene.hpp  RayAntialiasingScene.cpp  RayAntialiasingScene.h  RayBackgroundScene.cpp  RayBackgroundScene.h  RayDefocusBlurScene.cpp  RayDiffuseScene.cpp  RayDiffuseScene.h  RayMetalScene.cpp  RayMetalScene.h  RayRefractionScene.cpp  RaySphereScene.cpp  RaySphereScene.h  RaySphereScene2.cpp  RaySphereScene2.h  RaySphereScene3.cpp  RaySphereScene3.h  RayViewingScene.cpp  RayViewingScene.h  Scene.cpp  Scene.hpp
